--- a/style/style.css
+++ b/style/style.css
@@ -11,4 +11,9 @@ body {
 
     font-size: 15px;
     /*A propriedade font-size no CSS estabelece o tamanho da fonte. Esta propriedade também é usada para computaro tamanho de rem , em , ex , % , px , e outras unidades <length> (en-US) relativas*/
+
+    font-family: '', sans-serif;
+
+    font-weight: 400px;
+    /*A propriedade CSS font-weight especifica o peso ou a intensidade da fonte (ex.: negrito). Algumas fontes oferecem apenas as opções normal e negrito.*/
 }
