--- a/style/style.css
+++ b/style/style.css
@@ -17,3 +17,11 @@ body {
     font-weight: 400px;
     /*A propriedade CSS font-weight especifica o peso ou a intensidade da fonte (ex.: negrito). Algumas fontes oferecem apenas as opções normal e negrito.*/
 }
+
+/**/
+.container {
+    max-width: 960px;
+    /**/
+
+    margin: 0 auto;
+}
