--- a/style/style.css
+++ b/style/style.css
@@ -21,7 +21,26 @@ body {
 /**/
 .container {
     max-width: 960px;
-    /**/
+    /*A propriedade max-width do CSS estabelece a largura máxima de um elemento. Ele evita que o valor usado da propriedade width se torne maior que o valor especificado por max-width .*/
 
     margin: 0 auto;
+    /*A propriedade margin do CSS define a área de margem nos quatro lados do elemento. É uma abreviação que define todas as margens individuais de uma só vez: margin-top , margin-right (en-US), margin-bottom , e margin-left*/
+    /*Nesse caso aqui, em cima e em baixo a margem é 0, e na direita e na esquerda a margem e adaptavél, usando a propriedade auto.*/
+}
+
+.wrapper {
+    display: grid;
+    /**/
+
+    grid-template-columns: 1fr 1fr 1fr;
+    /**/
+
+    border-radius: 12px;
+    /**/
+
+    margin: 2rem;
+    /**/
+
+    overflow: hidden;
+    /**/
 }
