--- a/style/style.css
+++ b/style/style.css
@@ -30,7 +30,7 @@ body {
 
 .wrapper {
     display: grid;
-    /**/
+    /*O CSS Grid é um sistema de estruturação de layout que o CSS nos fornece. Diferente do Flexbox, que apenas nos permite trabalhar em uma única dimensão, o CSS Grid nos permite configurar layouts em duas dimensões (linhas e colunas). A junção de linhas e colunas formam uma grade, o que dá o nome a esse sistema (Grid).*/
 
     grid-template-columns: 1fr 1fr 1fr;
     /**/
