--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@700&display=swap');
 
 body {
     background-color: hsl(0, 0%, 98%);
