--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Red+Hat+Display:wght@700&display=swap'); /*Import de duas fontes, Big Shoulders Display e a fonte */
+@import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lexend+Deca:wght@700&display=swap');
+/*Import de duas fontes, Big Shoulders Display e a fonte */
 
 body {
     background-color: hsl(0, 0%, 98%);
