--- a/style/style.css
+++ b/style/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lexend+Deca:wght@700&display=swap');
 /*Import de duas fontes, Big Shoulders Display e a fonte */
 
-body {
+body main {
     background-color: hsl(0, 0%, 98%);
     min-height: 100vh;
     /*Altura miníma do dispositivo. Vw, por exemplo, V = view, ou seja, a tela do seu navegador, e W = width, largura, portanto 100vw é 100%, em outras palavras, toda a largura visível do navegador. Seguindo a ideia o Vh é V = view, H = height que significa altura, então 100vh é toda altura visível do seu navegador.*/
@@ -17,7 +17,7 @@ body {
 
     font-family: 'Lexend Deca', sans-serif;
 
-    font-weight: 400px;
+    font-weight: 400;
     /*A propriedade CSS font-weight especifica o peso ou a intensidade da fonte (ex.: negrito). Algumas fontes oferecem apenas as opções normal e negrito.*/
 }
 
