--- a/style/style.css
+++ b/style/style.css
@@ -53,14 +53,17 @@ body main .container {
 
 .box1 {
     background-color: hsl(31, 77%, 52%);
+    padding: 32px;
 }
 
 .box2 {
     background-color: hsl(184, 100%, 22%);
+    padding: 32px;
 }
 
 .box3 {
     background-color: hsl(179, 100%, 13%);
+    padding: 32px;
 }
 
 .box {
