--- a/style/style.css
+++ b/style/style.css
@@ -50,7 +50,7 @@ body main .container {
     /*O overflow é uma propriedade do CSS utilizada para tratar conteúdos que ultrapassam os limites de um elemento. 
     O objetivo do overflow é fazer com que conteúdos muito grandes possam caber dentro de uma página através do uso de barras de rolagem.*/
 
-    
+
 }
 
 .box1 {
@@ -72,14 +72,14 @@ body main .container {
     padding: 40px;
 }
 
-.box h2 {
+.wrapper h2 {
     font-family: 'Big Shoulders Display', cursive;
     text-transform: uppercase;
     color: white;
     font-size: 30px;
 }
 
-.box p {
+.wrapper p {
     color: hsl(0, 0%, 100%, 0.75);
     /*A função hsl() é uma função embutida em CSS que é usada para definir as cores usando o modelo Hue-saturation-lightness (HSL).
     
@@ -97,7 +97,7 @@ luminosidade: este parâmetro é usado para definir a luminosidade em que 0% rep
     A distância é medida entre as linhas de base (baseline) de duas linhas consecutivas.*/
 }
 
-.box a {
+.wrapper a {
     text-decoration: none;
     /*A propriedade text-decoration do CSS é usada para definir a formatação de underline , overline , line-through ou blink . 
     
