--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lexend+Deca:wght@700&display=swap');
 /*Import de duas fontes, Big Shoulders Display e a fonte */
 
+* {
+    padding: 0%;
+    margin: 0%;
+    box-sizing: border-box;
+}
+
 body main {
     background-color: hsl(0, 0%, 98%);
     min-height: 100vh;
@@ -17,12 +23,12 @@ body main {
 
     font-family: 'Lexend Deca', sans-serif;
 
-    font-weight: 400;
+    font-weight: 400px;
     /*A propriedade CSS font-weight especifica o peso ou a intensidade da fonte (ex.: negrito). Algumas fontes oferecem apenas as opções normal e negrito.*/
 }
 
 /**/
-body main .container {
+.container {
     max-width: 960px;
     /*A propriedade max-width do CSS estabelece a largura máxima de um elemento. Ele evita que o valor usado da propriedade width se torne maior que o valor especificado por max-width .*/
 
